# move-compiler-does-not-compile

./: Cargo.toml
src/bins/hello-world/: main.rs
