[package]
name = "rust-no-workspace-template"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for Sui literals"
license = "MIT"
repository = "https://github.com/yourusername/rust-no-workspace-template"
documentation = "https://docs.rs/rust-no-workspace-template"
homepage = "https://yourwebsite.com/rust-no-workspace-template"
keywords = ["literals", "proc-macro"]
categories = ["development-tools", "macros"]
readme = "README.md"
exclude = ["target", "tests/tmp"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[[bin]]
name = "hello-world"
path = "src/bins/hello-world/main.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
regex = "^1.5"
log = "^0.4"
env_logger = "^0.9"
anyhow = "^1.0"
thiserror = "^1.0"
clap = { version = "^3.0", features = ["derive"] }
toml = "^0.5"
lazy_static = "^1.4"
proc-macro2 = "^1.0.86"
quote = "^1.0.36"
syn = "^2.0.71"
tokio = { version = "^1.0" }
tonic = "^0.12"

# Tried { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.34.2" } doesn't work!
# Should always use `branch`, e.g. `branch = "main"` to specify the `sui` crates!
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "main" }
# sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "main" }
# sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "main"  }
# sui-json = { git = "https://github.com/MystenLabs/sui", branch = "main"  }

# Comment or Uncomment them doesn't matter, still cannot compile
# [profile.dev]
# opt-level = 1
# debug = true
# overflow-checks = true
# lto = false

# [profile.release]
# opt-level = 3
# debug = false
# overflow-checks = true
# lto = true